--- a/.github/workflows/m2ain.yml
+++ b/.github/workflows/m2ain.yml
@@ -24,13 +24,15 @@ jobs:
           # Enable built-in RDP firewall rules
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
 
-      - name: Create RDP User with Simple Password
+      - name: Create RDP User with Strong Password
         run: |
-          $password = "Rdp!$(Get-Random -Maximum 99999)"
+          $password = "Rdp!" + (Get-Random -Maximum 99999).ToString("00000") + "Ab"
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
 
           if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
               New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+          } else {
+              Set-LocalUser -Name "RDP" -Password $securePass
           }
 
           Add-LocalGroupMember -Group "Administrators" -Member "RDP" -ErrorAction SilentlyContinue
